# music_player

./: .gitignore  .tasks  README.md  main.py  pyproject.toml  pyrightconfig.json
pymusic/: __init__.py  main.py  settings.py
pymusic/core/: __init__.py
pymusic/core/login/: __init__.py
pymusic/lib/: AES.py  RSA.py  asynctk.py  logger.py  plist.py
pymusic/sources/: __init__.py  headers.json  headers.py  model.py
pymusic/sources/kg/: __init__.py  kg.py
pymusic/sources/kw/: __init__.py  cookie  kw.py  setting
pymusic/sources/mg/: __init__.py  cookie  data.txt  mg.py  setting
pymusic/sources/qq/: __init__.py
pymusic/sources/qqjt/: __init__.py  setting
pymusic/sources/wyy/: __init__.py  cookie  setting
pymusic/ui/: __init__.py  login_dialog.py  player.ui  playerapp.py
pymusic/ui/login/: __init__.py  dialog.py
pymusic/ui/source/: player.ui
src/music_player/: __main__.py  core.py  login.py  search.py  utils.py
src/music_player/core/: __init__.py  home.py  login.py  play_list.py  search.py
src/music_player/lib/: media_player.py  qt_components.py
src/music_player/ui/: home.ui  home_ui.py  icons.qrc  icons_rc.py  login.ui  login_ui.py  main.ui  main_ui.py  play_list.ui  play_list_ui.py  search.ui  search_ui.py
tests/: test.py  tktest.py  urltest.py
